--- a/position.html
+++ b/position.html
@@ -13,14 +13,14 @@
             width: 80%;
             margin: auto;
             border-radius: 10px;
-            background: lightgreen;
+            background: rgb(189, 184, 228);
         }
         .box-1{
             width: 100%;
             height: 150px;
             border-top-left-radius: 10px;
             border-top-right-radius: 10px;
-            background: rgb(62, 62, 243);
+            background: rgb(105, 105, 150);
         }
         .box-2{
             width: 80%;
@@ -30,7 +30,7 @@
             border-radius: 10px;
             position: relative;
             top: -60px;
-            background: rgb(244, 248, 244);
+            background: rgba(244, 248, 244, 0.411);
         }
         .heading{
             font-size: 25px;
